Added the Testimonial Section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	<link rel="stylesheet" href="assets/css/FAQ.css">
 
-	
+
 	<!-- CONTACT-SECTION -->
 	<link rel="stylesheet" href="/assets/css/contactSection.css">
 
@@ -90,6 +90,11 @@
 							</a>
 						</li>
 						<li class="nav-item">
+							<a class="nav-link" href="#testimonial1">
+								Testimonials
+							</a>
+						</li>
+						<li class="nav-item">
 							<a class="nav-link" href="#events">
 								Events
 							</a>
@@ -138,19 +143,20 @@
 								Also, We Share Resources, Roadmaps to learn different technologies and share
 								opportunities related to Internships and different tech programs.
 
-							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
+								<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
-								<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
-									<img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
-									Join
+									<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank"
+										class="btn btn-common">
+										<img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
+										Join
 
-									Now</i></a>
-								<a href="#about" class="btn btn-outline-danger btn-common video-popup">
-									<img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
-									More</i></a>
-							</div>
+										Now</i></a>
+									<a href="#about" class="btn btn-outline-danger btn-common video-popup">
+										<img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
+										More</i></a>
+								</div>
 
-							<br>Join the community on Discord for interaction with students from all over India.
+								<br>Join the community on Discord for interaction with students from all over India.
 							</p>
 							<br>
 
@@ -1121,7 +1127,7 @@
 		</div>
 
 
-		
+
 		<!-- --------------------- -->
 
 		<br>
@@ -1133,6 +1139,100 @@
 
 
 	<!-- Opportunity end -->
+
+	<!-- Testimonial Section Start -->
+	<section id="testimonial1" class="testimonial section-padding">
+
+		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
+			<h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Valuable Testimonials</h2>
+			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+		</div>
+		<div class="container" data-aos="fade-up" data-aos-duration="1500">
+			<div class="row justify-content-center">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<div id="testimonials">
+						<div id="testimonials-slider">
+							<div class="swiper">
+								<div class="swiper-wrapper">
+
+									<div class="swiper-slide">
+										<div class="testimonial-item">
+											<div class="img-thumb">
+												<img src="./assets/img/team/aditi.webp" alt="">
+											</div>
+											<div class="info">
+												<h2>Aditi Tiwari</h2>
+												<h3>Learning new technology was a daunting task for us we didn't know where to begin or what questions to ask in never seen to follow through when we asked so Code In Community did everything with almost no time or effort for me.</h3>
+											</div>
+										</div>
+									</div>
+
+									<div class="swiper-slide">
+										<div class="testimonial-item">
+											<div class="img-thumb">
+												<img src="./assets/img/team/amisha.jpg" alt="">
+											</div>
+											<div class="info">
+												<h2>Amisha Mahapatra
+												</h2>
+												<h3>Learning new technology was a daunting task for us we didn't know where to begin or what questions to ask in never seen to follow through when we asked so Code In Community did everything with almost no time or effort for me.
+												</h3>
+											</div>
+										</div>
+									</div>
+
+
+
+									<div class="swiper-slide">
+										<div class="testimonial-item">
+											<div class="img-thumb">
+												<img src="./assets/img/team/shruti_khapure.jpg" alt="">
+											</div>
+											<div class="info">
+												<h2>Shruti Khapure</h2>
+												<h3>I enjoy learning with coding community because the site is user friendly and mixed learning simple. Moreover the tutors here are wonderful and patient.</h3>
+											</div>
+										</div>
+									</div>
+
+									<div class="swiper-slide">
+										<div class="testimonial-item">
+											<div class="img-thumb">
+												<img src="./assets/img/team/Sidharth Sethi.png" alt="">
+											</div>
+											<div class="info">
+												<h2>Siddharth Sethi</h2>
+												<h3> I enjoy learning with coding community because the site is user friendly and mixed learning simple. Moreover the tutors here are wonderful and patient.</h3>
+											</div>
+										</div>
+									</div>
+
+									<div class="swiper-slide">
+										<div class="testimonial-item">
+											<div class="img-thumb">
+												<img src="./assets/img/team/chetan.jpg" alt="">
+											</div>
+											<div class="info">
+												<h2> Chetan Sharma </h2>
+												<h3> I am a big fan of coding community because it makes it so much
+													easier for me to learn new technology and acquire new skills that I
+													have missed or was hunting to explore</h3>
+											</div>
+
+										</div>
+									</div>
+
+								</div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+	</section>
 
 	<!--Blog Section Start -->
 
@@ -1416,68 +1516,77 @@
        End  Community partner
         ==================================== -->
 
-		<!-- FAQs section start	 -->
+	<!-- FAQs section start	 -->
 	<section id="FAQs">
 		<div class="container" data-aos="fade-up" data-aos-duration="1500">
 			<h1 class="text-center mt-5 community_title wow fadeInDown animated" data-wow-duration="500ms">FAQs</h1>
 			<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
 
-		<br>
-		
-		<button class="accordionFAQs" data-toggle="collapse"
-		data-target="#collapseOne" >What is CodeIN Community? </button>
-		<div class="panelFAQs">
-  			<p class="panelParaFAQs">CodeIN Community is the Community of more than 2,500+ Coding Enthusiasts. Where we organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies and share opportunities related to Internships and different tech programs.</p>
-		</div>
+			<br>
 
-		<button class="accordionFAQs">How to join community as a member?</button>
-		<div class="panelFAQs">
-  			<p class="panelParaFAQs"><a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" >
-				
-				JOIN US NOW</a> on our discord server and become member of our community. <br><a href="https://codeincommunity.bio.link/">CLICK HERE</a> to join us on other platforms.  </p>
-		</div>
+			<button class="accordionFAQs" data-toggle="collapse" data-target="#collapseOne">What is CodeIN Community?
+			</button>
+			<div class="panelFAQs">
+				<p class="panelParaFAQs">CodeIN Community is the Community of more than 2,500+ Coding Enthusiasts. Where
+					we organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources,
+					Roadmaps to learn different technologies and share opportunities related to Internships and
+					different tech programs.</p>
+			</div>
 
-		<button class="accordionFAQs">How to join organising Team?</button>
-		<div class="panelFAQs">
-  			<p class="panelParaFAQs"><a href="#joinus">CLICK HERE </a> to join our Core Team, Mentor Team and Volunteer Team and Fill out the form.<br><br>
-				<b>Perks of joining our community -</b><br>
-			We always believe in rewarding people who are doing great in our community, and helping the students to learn and grow. We provide goodies to the best contributors and LOR based on their performance.</p>
-		</div>
-		<button class="accordionFAQs">What are the benefits of joining CodeIN Community?</button>
-		<div class="panelFAQs">
-  			<p class="panelParaFAQs"><ul >
-				<li>&#x25BA;&nbsp; MENTOR'S GUIDE & SUPPORT</li>
-				<li>&#x25BA;&nbsp; HELP EVERYONE TO LEARN & GROW</li>
-				<li>&#x25BA;&nbsp; WORKSHOPS AND MEETING SESSIONS</li>
-				<li>&#x25BA;&nbsp; HACKATHONS & INTERNSHIP OPPORTUNITY</li>
-				<li>&#x25BA;&nbsp; EXPOSURE TO STUDENTS & MENTORS AROUND THE WORLD</li>
-				<li>&#x25BA;&nbsp; GOODIES TO BEST PERFORMERS AND CONTRIBUTORS</li>
-				<br>
-			</ul>
-		</div>
-		<button class="accordionFAQs">What type of Events we conduct?</button>
-		<div class="panelFAQs">
-  			<p class="panelParaFAQs">We organize Events, Hackathons, and Workshops on different Technologies. Also, We Share Resources, Roadmaps to learn different technologies.<a href="#events">CLICK HERE</a> to check Our Events.</p>
-		</div>
+			<button class="accordionFAQs">How to join community as a member?</button>
+			<div class="panelFAQs">
+				<p class="panelParaFAQs"><a href="https://discord.com/invite/sqFRzrj7f3" target="_blank">
+
+						JOIN US NOW</a> on our discord server and become member of our community. <br><a
+						href="https://codeincommunity.bio.link/">CLICK HERE</a> to join us on other platforms. </p>
+			</div>
+
+			<button class="accordionFAQs">How to join organising Team?</button>
+			<div class="panelFAQs">
+				<p class="panelParaFAQs"><a href="#joinus">CLICK HERE </a> to join our Core Team, Mentor Team and
+					Volunteer Team and Fill out the form.<br><br>
+					<b>Perks of joining our community -</b><br>
+					We always believe in rewarding people who are doing great in our community, and helping the students
+					to learn and grow. We provide goodies to the best contributors and LOR based on their performance.
+				</p>
+			</div>
+			<button class="accordionFAQs">What are the benefits of joining CodeIN Community?</button>
+			<div class="panelFAQs">
+				<p class="panelParaFAQs">
+					<ul>
+						<li>&#x25BA;&nbsp; MENTOR'S GUIDE & SUPPORT</li>
+						<li>&#x25BA;&nbsp; HELP EVERYONE TO LEARN & GROW</li>
+						<li>&#x25BA;&nbsp; WORKSHOPS AND MEETING SESSIONS</li>
+						<li>&#x25BA;&nbsp; HACKATHONS & INTERNSHIP OPPORTUNITY</li>
+						<li>&#x25BA;&nbsp; EXPOSURE TO STUDENTS & MENTORS AROUND THE WORLD</li>
+						<li>&#x25BA;&nbsp; GOODIES TO BEST PERFORMERS AND CONTRIBUTORS</li>
+						<br>
+					</ul>
+			</div>
+			<button class="accordionFAQs">What type of Events we conduct?</button>
+			<div class="panelFAQs">
+				<p class="panelParaFAQs">We organize Events, Hackathons, and Workshops on different Technologies. Also,
+					We Share Resources, Roadmaps to learn different technologies.<a href="#events">CLICK HERE</a> to
+					check Our Events.</p>
+			</div>
 		</div>
 		<script>
 			var acc = document.getElementsByClassName("accordionFAQs");
 			var i;
 
 			for (i = 0; i < acc.length; i++) {
-  				acc[i].addEventListener("click", function() {
-  				  this.classList.toggle("active");
-    				var panel = this.nextElementSibling;
-    				if (panel.style.maxHeight) {
-      					panel.style.maxHeight = null;
-    				} else {
-      					panel.style.maxHeight = panel.scrollHeight + "px";
-   					 }
-  				});
+				acc[i].addEventListener("click", function () {
+					this.classList.toggle("active");
+					var panel = this.nextElementSibling;
+					if (panel.style.maxHeight) {
+						panel.style.maxHeight = null;
+					} else {
+						panel.style.maxHeight = panel.scrollHeight + "px";
+					}
+				});
 			}
-			
-			</script>
-	</section>	
+		</script>
+	</section>
 
 	<!-- FAQs section ends	 -->
 
@@ -1485,44 +1594,48 @@
 	<section id="contact" class="section-padding bg-gray contactSection" data-aos="fade-up" data-aos-duration="1500">
 		<div class="text-center Contactsec">
 			<div class="section-header Contactsec text-center">
-					  <h2 class=" wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
-					  <div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
-				  </div>
-			  <div class="row">
-				  <div class="col-md-6">
-					  <form class="mt-5" id="contactForm">
-						  <div class="form-row">
-							  <div class="form-group col-md-6 ">
-								<input type="text" class="form-control" id="inputName"  placeholder="Name">
-							  </div>
-							  <div class="form-group col-md-6 ">
-							  <input type="email" class="form-control" id="inputEmail" placeholder="Email">
-							  </div>
+				<h2 class=" wow fadeInDown" data-wow-delay="0.3s">Contact Us</h2>
+				<div class="shape wow fadeInDown" data-wow-delay="0.3s"></div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<form class="mt-5" id="contactForm">
+						<div class="form-row">
+							<div class="form-group col-md-6 ">
+								<input type="text" class="form-control" id="inputName" placeholder="Name">
 							</div>
-						  <div class="form-group ">
-							<input type="text" class="form-control" id="subj" placeholder="Subject" required>
-						  </div>
-						  <div class="form-group">
-						   <textarea class="form-control" id="msg" rows="5" placeholder="Your Message" required></textarea>
+							<div class="form-group col-md-6 ">
+								<input type="email" class="form-control" id="inputEmail" placeholder="Email">
 							</div>
-						  <button class="Cbtn text-light float-left" id="checkBtn" type="submit">Submit</button>
-						  <br>
-						  <div id="msgSubmit" class="h3 text-left hidden"></div>
-						  <br><br>
-						</form>
 						</div>
-				  <div class="col-md-6 text-center">
-					  <img class="image-fluid bg-cont" src="/assets/img/pngtree-contact-us-flat-design-style-png-image_2766546-removebg-preview.png">
-				  </div>
-			  </div>
-		  </div>
+						<div class="form-group ">
+							<input type="text" class="form-control" id="subj" placeholder="Subject" required>
+						</div>
+						<div class="form-group">
+							<textarea class="form-control" id="msg" rows="5" placeholder="Your Message"
+								required></textarea>
+						</div>
+						<button class="Cbtn text-light float-left" id="checkBtn" type="submit">Submit</button>
+						<br>
+						<div id="msgSubmit" class="h3 text-left hidden"></div>
+						<br><br>
+					</form>
+				</div>
+				<div class="col-md-6 text-center">
+					<img class="image-fluid bg-cont"
+						src="/assets/img/pngtree-contact-us-flat-design-style-png-image_2766546-removebg-preview.png">
+				</div>
+			</div>
+		</div>
 	</section>
 	<!-- Contact Section End -->
 	<!--Start of Tawk.to Script-->
 	<script type="text/javascript">
-		var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+		var Tawk_API = Tawk_API || {},
+			Tawk_LoadStart = new Date();
 		(function () {
-			var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+			var s1 = document.createElement("script"),
+				s0 = document.getElementsByTagName("script")[0];
 			s1.async = true;
 			s1.src = 'https://embed.tawk.to/615f64df157d100a41ab54f3/1fhea43dh';
 			s1.charset = 'UTF-8';
@@ -1575,9 +1688,9 @@
 						<h3 class="footer-news">Subscribe to our Newsletter</h3>
 						<p class="text-light mb-2">Subscribe to get latest updates and updates.</p>
 						<div class="mail">
-						<input type="email" id="Email" placeholder="enter your email.." />
-						<a type="submit" id="btns" label="submit" placeholder="submit">Submit</a>
-					    </div>
+							<input type="email" id="Email" placeholder="enter your email.." />
+							<a type="submit" id="btns" label="submit" placeholder="submit">Submit</a>
+						</div>
 						<small class="text-light" id="suscribeMsg"></small>
 
 						<h3 class="contact-footer mt-5">Contact</h3>
@@ -1593,7 +1706,7 @@
 							</li>
 						</ul>
 					</div>
-					
+
 				</div>
 			</div>
 		</div>
@@ -1684,8 +1797,7 @@
 			var y = window.scrollY;
 			if (y >= 220) {
 				navtbut.className = "appear"
-			}
-			else {
+			} else {
 				navtbut.className = "disappear"
 			}
 		};
