--- a/blog.html
+++ b/blog.html
@@ -364,6 +364,22 @@
                 <img src="./assets/img/Partners/GMC LogoS.png" class="communityPartner__image" alt="">
               </a>
             </div>
+
+            <div class="community_box box2" data-tilt data-tilt-scale="1.1">
+							<a href="https://www.newtonschool.co/" style="text-decoration: none;"
+								target="_blank">
+								<img src="./assets/img/Partners/Newton School.png" class="communityPartner__image"
+									alt="Azdev community image">
+							</a>
+						</div>
+
+						<div class="community_box box2" data-tilt data-tilt-scale="1.1">
+							<a href="https://www.codingminutes.com/" style="text-decoration: none;"
+								target="_blank">
+								<img src="./assets/img/Partners/CodingMinutes Logo.png" class="communityPartner__image"
+									alt="Azdev community image">
+							</a>
+						</div>
           </div>
 
         </div>
