--- a/index.html
+++ b/index.html
@@ -94,11 +94,7 @@
 								Events
 							</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#testimonial1">
-								Testimonials
-							</a>
-						</li>
+						
 						<li class="nav-item">
 							<a class="nav-link" href="#opportunity">
 								Opportunity
@@ -107,6 +103,11 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#blog">
 								Blogs
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="#testimonial1">
+								Testimonials
 							</a>
 						</li>
 						<li class="nav-item">
@@ -1139,79 +1140,7 @@
 
 	<!-- Opportunity end -->
 
-	  <!-- Testimonial Section Start -->
-  <section id="testimonial1" class="testimonial-community section-padding">
-    <div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
-      <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Testimonials</h2>
-      <div class="shape-testimonial wow fadeInDown" data-wow-delay="0.3s"></div>
-	  <div class="bio-testimonial wow fadeInDown">What does the community have to say about us?</div>
-    </div>
-    <div class="container" data-aos="fade-up" data-aos-duration="1500">
-      <div class="row justify-content-center">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <div id="testimonials">
-            <div id="testimonials-slider">
-              <div class="swiper">
-                <div class="swiper-wrapper">
-
-                  <div class="swiper-slide">
-                    <div class="testimonial-item">
-                      <div class="img-thumb">
-                        <img src="./assets/img/team/akansha.jpg" alt="">
-                      </div>
-                      <div class="info">
-                        <h2>Akanksha</h2>
-                        <h3>I've been programming professionally for 20 years, and I'm damn good at it: still, 
-							I've been following along with Kunal's DSA Course and I'm learning stuff. 
-							It's a whole lot of fun. Kunal is passionate and entertaining while explaining CS topics for all to understand.</h3>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="testimonial-item">
-                      <div class="img-thumb">
-                        <img src="./assets/img/team/priyal.jpg" alt="">
-                      </div>
-                      <div class="info">
-                        <h2>Priyal
-                        </h2>
-                        <h3>Never thought programming would be
-							that easy and interesting. Just watched
-							the binary search video of Kunal and
-							literally understood every single thing. It's
-							such a boon to learn from you. Thank You
-							so much for providing this help.</h3>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="swiper-slide">
-                    <div class="testimonial-item">
-                      <div class="img-thumb">
-                        <img src="./assets/img/team/vaibhav.jpg" alt="">
-                      </div>
-                      <div class="info">
-                        <h2>Vaibhav</h2>
-                        <h3>To me open source means passion,
-							community, possibilities. support, and
-							creativity. Through his content. Kunal is
-							Creating inclusive spaces where all of
-							those can come together, It’s not about
-							where you went to university or how you
-							arrived. what’s important is that you
-							matter and you are here.</h3>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-
-  </section>
+	 
 
 	<!--Blog Section Start -->
 
@@ -1290,6 +1219,78 @@
 	<br><br>
 	<!-- Blog Section End-->
 
+	 <!-- Testimonial Section Start -->
+	 <section id="testimonial1" class="testimonial-community section-padding">
+		<div class="section-header text-center" data-aos="fade-up" data-aos-duration="1500">
+		  <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s">Testimonials</h2>
+		  <div class="shape-testimonial wow fadeInDown" data-wow-delay="0.3s"></div>
+		  <div class="bio-testimonial wow fadeInDown">What does the community have to say about us?</div>
+		</div>
+		<div class="container" data-aos="fade-up" data-aos-duration="1500">
+		  <div class="row justify-content-center">
+			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			  <div id="testimonials">
+				<div id="testimonials-slider">
+				  <div class="swiper">
+					<div class="swiper-wrapper">
+	
+					  <div class="swiper-slide">
+						<div class="testimonial-item">
+						  <div class="img-thumb">
+							<img src="./assets/img/team/mohammad.jpg" alt="">
+						  </div>
+						  <div class="info">
+							<h2>Muhammad Samiullah </h2>
+							<h3>I learned about open source and contributed to open source projects of CodeIN Community. 
+								I am extremely excited to tell you that my project got merged with Microsoft academic content. 
+								Thank you, I learn a lot by contributing in CodeIn community.</h3>
+						  </div>
+						</div>
+					  </div>
+					  <div class="swiper-slide">
+						<div class="testimonial-item">
+						  <div class="img-thumb">
+							<img src="./assets/img/team/shikha.jpg" alt="">
+						  </div>
+						  <div class="info">
+							<h2>Shikha Chaturvedi
+							</h2>
+							<h3>Never thought programming would be
+								that easy and interesting. Community based learning is just awesome.
+								Mentors are really helpful and helped a lot during my coding journey.
+								 Thank You, CodeIN Community
+								so much for providing this help.</h3>
+						  </div>
+						</div>
+					  </div>
+					  <div class="swiper-slide">
+						<div class="testimonial-item">
+						  <div class="img-thumb">
+							<img src="./assets/img/team/vaibhav.jpg" alt="">
+						  </div>
+						  <div class="info">
+							<h2>Vaibhav</h2>
+							<h3>To me open source means passion,
+								community, possibilities. support, and
+								creativity. Through his content. CodeIN is
+								Creating inclusive spaces where all of
+								those can come together, It’s not about
+								where you went to university or how you
+								arrived. what’s important is that you
+								matter and you are here.</h3>
+						  </div>
+						</div>
+					  </div>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	
+	
+	  </section>
 
 	<!-- join us start -->
 	<section id="joinus" class="section-padding bg-white">
