100 Days of code published

--- a/index.html
+++ b/index.html
@@ -1089,9 +1089,9 @@
 		<div class="oppurtunity_section">
 
 			<div class="card">
-				<img class="card-img-top" src="./assets/img/opportunity/opp-1-small.webp" alt="GDSC Image">
+				<img class="card-img-top" src="./assets/img/opportunity/100 Days of Code.png" alt="GDSC Image">
 				<div class="card-body">
-					<h5 class="card-title">Google Developer Student Clubs is come up with GDSC WOW</h5>
+					<h5 class="card-title"> 100 Days of Code Program 🧑‍💻- By CodeIN Community</h5>
 					<a href="./opportunity.html" class="btn btn-common opportunity_btn" type="button">
 						Expand
 					</a>
