--- a/opportunity.html
+++ b/opportunity.html
@@ -110,28 +110,29 @@
                 <div class="oppurtunity_section">
 
             <div class="card">
-                <img class="card-img-top" src="./assets/img/opportunity/opp-1.jpg" alt="Card image cap">
+                <img class="card-img-top" src="./assets/img/opportunity/100 Days of Code.png" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Google Developer Student Clubs is come up with GDSC WOW</h5>
+                    <h5 class="card-title">CodeIN Community is come up with 100 Days of Code Program</h5>
                     <br> <br>
                     </p>
                     <ul style="list-style-type:square">
-                        <li> GDSC WOW (Wonder of Wonders) 2021 is
-                            a 3-day long virtual event consisting of webinars covering various topics of the
-                            latest
-                            technologies and
-                            the treasure hunt game - Treasure to WOW which will run through the event.
-                            Doesn't it sound exciting??? The wait is over 🤩 <br>
+                        <li> Hello Folks, At CodeIN Community we are organizing the most awaited program of the year 100 Days of Code 🤩. This program will help you to bring your consistency as well as our mentors will help you to solve your problems.
+                            <br>
                         </li>
-                        <li> <br>GDSC WOW is a collaborative event of 200+ GDSCs from India✨✨, who have
-                            joined hands to bring together students, developers, and communities
-                            under the same roof. This event will act as a platform to attain knowledge
-                            and work on projects with experts in real-time. It will help beginners take
-                            a step towards their technical careers.
-                            Registrations are open now!! <br>
+                        <li> <br>The program is sponsored by Coding Minutes ✅ and Newton School and at the end of the program all Performing participants who will complete the program will receive Goodies, Vouchers and Rewards 🎁 👕  from our sponsors. 
+
+                
+                            
+                            📢  Program starts on: 1st July 2022
+                            <br>
+                            Participants need to be active each day from the starting date till the end of the program to be eligible for the challenge.
+
+                             Winners of the program will also get Internship opportunities from our sponsor Newton School.
+                             And all eligible participants will receive Goodies, Vouchers and verified Certificates. 🥳
+                             <br>
                         </li>
-                        <li> <br>Register here🔥: <a href=" https://gdscwow.tech/register">
-                                https://gdscwow.tech/register</a>
+                        <li> <br>Register here🔥: <a href=" https://bit.ly/CodeIN-100daysofcode">
+                                https://bit.ly/CodeIN-100daysofcode</a>
                         </li>
                         <br>
                     </ul>
