--- a/giveaway.html
+++ b/giveaway.html
@@ -153,7 +153,7 @@
 
         3. Priya Chakraborty
         <br> 
-        4. Aditya Ray
+        4. Dolly kumari 
         <br>
         5. Rima Panja
       </p>
@@ -187,6 +187,7 @@ Rimjhim Kumari
 Shreyash Varshney 
 Avadhkumar 
 Yash Daga
+Nupur Sharma
 Ankur Sarkar
 Jenish Shah 
 Sattyam Samania
