--- a/404.html
+++ b/404.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Not Found</title>
+    <meta name="description"
+        content="CodeIN Community is the Community of Coding Enthusiasts
+	 Join Us for Hackathons, Technical Events, Open Source, Internship Opportunities and various upcoming opportunities to learn different technologies.">
+    <link rel="shortcut icon" href="./assets/img/logo.png" type="image/x-png">
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
 
