--- a/index.html
+++ b/index.html
@@ -441,7 +441,26 @@
 											</div>
 
 										</div>
+									</div>	<div class="swiper-slide">
+										<div class="testimonial-item">
+											<div class="img-thumb">
+												<img src="./assets/img/team/Priyanshu Mundra.webp" alt="Team members">
+											</div>
+											<div class="info">
+												<h2>Priyanshu Mundra</h2>
+												<h3>T6echnical member</h3>
+											</div>
+
+											<div class="media-icons">
+												<a href="https://github.com/Spyder15" target="_blank"><i
+														class="fab fa-github"></i></a>
+												<a href="https://www.linkedin.com/in/priyanshu-mundra-b66626216"
+													target="_blank"><i class="fab fa-linkedin"></i></a>
+											</div>
+
+										</div>
 									</div>
+
 
 
 
