--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 						<div class="contents">
 
 							<h2 class="head-title">CodeIN Community </h2>
-							<p>CodeIN Community is the Community of more than 6,000+ Coding Enthusiasts.
+							<p>CodeIN Community is the Community of more than 7,000+ Coding Enthusiasts.
 								Where we organize Events, Hackathons, and Workshops on different Technologies.
 								Also, We Share Resources, Roadmaps to learn different technologies and share
 								opportunities related to Internships and different tech programs.
@@ -1315,7 +1315,7 @@
 			</div>
 
 			<div class="card">
-				<img class="card-img-top" src="./assets/img/join_us/mentors.jpeg" alt="mentors">
+				<img class="card-img-top" src="./assets/img/join_us/mentors.png" alt="mentors">
 				<div class="card-body">
 					<h5 class="card-title text-center">Join Our Mentor Team</h5>
 					<a href="https://forms.gle/5vst4FpM9qveehv4A" class="btn btn-common opportunity_btn" type="button">
@@ -1352,7 +1352,7 @@
 			<div class="box">
 				<div class="icon"><i class="fas fa-users"></i></div>
 				<div class="d-flex align-items-center">
-					<h1 class="counter">6000</h1>
+					<h1 class="counter">7000</h1>
 					<p style="font-size: 50px;"> +</p>
 				</div>
 				<div class="text">Community members</div>
