--- a/giveaway.html
+++ b/giveaway.html
@@ -136,7 +136,7 @@
         <img src="./assets/img/about/img-1.png" alt="benefit">
     </div>
     <div class = "page-header">
-  <h2 class="heading">Giveaway Winners July 2022</h2>
+  <h2 class="heading">Giveaway Winners 2022</h2>
 </div>
     
 <div class="container">  
