--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
 							<div class="header-button" data-aos="fade-right" data-aos-duration="2000">
 
 								<a href="https://discord.com/invite/sqFRzrj7f3" target="_blank" class="btn btn-common">
-									<img src="./assets/img/discord.png" width="25" style="margin-right: 10px;" />
+									<i class="fa fa-brands fa-discord"></i>
 									Join
 
 									Now</i></a>
 								<a href="#about" class="btn btn-outline-danger btn-common video-popup">
-									<img src="./assets/img/grad.png" width="25" style="margin-right: 10px;" />Learn
+									<i class=" fa fa-sharp fa-solid fa-graduation-cap"></i>Learn
 									More</i></a>
 							</div>
 
