--- a/index.html
+++ b/index.html
@@ -125,6 +125,11 @@
 								Join Us
 							</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link btn btn-outline-danger rounded px-3" href="./hacktoberfest2022.html">
+								HacktoberFest 2022
+							</a>
+						</li>
 					</ul>
 				</div>
 			</div>
