--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -191,8 +191,7 @@
         <!--  </a>
  -->
         <div class="description">
-          This is an Open-Source Library Website in which you get Resources to learn different topics, Donate book section to donate your old books, and a Book issue section to keep a record of all the books issued. This website helps you to find the books easily without any cost and the best part about the website is that you can also contribute to the website for others to use the resourses by donating the books you have.
-
+          This is an Open-Source Library Website in which you get Resources to learn different topics, Donate book section to donate your old books, and a Book issue section to keep a record of all the books issued.
 
         </div>
 
