--- a/hacktoberfest2022.html
+++ b/hacktoberfest2022.html
@@ -191,8 +191,7 @@
         <!--  </a>
  -->
         <div class="description">
-          This is an Open-Source Library Website in which you get Resources to learn different topics, Donate book section to donate your old books, and a Book issue section to keep a record of all the books issued.
-
+          This is an Open-Source Library Website in which you get Resources to learn different topics, Donate book section to donate your old books.
         </div>
 
         <a href="https://github.com/SauravMukherjee44/Aec-Library-Website" class="read_btn" data-aos="fade-up">Go to Project</a>
